--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -40,3 +40,18 @@
     color:  #f7d354; 
 }
     
+.bar-link {
+    font-weight: bold;
+    font-size: 1rem;
+    margin-top: 20px;
+    text-align: right;
+}
+
+.bar-link a{
+    padding: 10px;
+
+}
+
+.bar-link a:hover{
+    background-color: #111;
+}
